--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,700;1,400;1,700&display=swap');
 
-@import './variables.css';
+@import './_variables.css';
 
 *,
 *::after,
@@ -12,13 +12,13 @@
 
 html {
   font-family: 'Nunito', sans-serif;
-  background: var(--alpha);
-  color: var(--light);
+  background: var(--natural-50);
+  color: var(--natural-900);
 }
 button,
 input {
   font-family: 'Nunito', sans-serif;
-  color: var(--light);
+  color: var(--natural-900);
   border: 0px;
 }
 input:focus {
