--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,11 +16,14 @@ html {
   color: var(--natural-900);
 }
 button,
-input {
+select,
+option input {
   font-family: 'Nunito', sans-serif;
   color: var(--natural-900);
   border: 0px;
 }
-input:focus {
+input:focus,
+select:focus,
+option:focus {
   outline: none;
 }
