--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,600;1,700&display=swap');
 
 @import './_variables.css';
 
@@ -11,14 +11,15 @@
 }
 
 html {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: var(--natural-50);
   color: var(--natural-900);
 }
 button,
 select,
-option input {
-  font-family: 'Nunito', sans-serif;
+option,
+input {
+  font-family: 'Poppins', sans-serif;
   color: var(--natural-900);
   border: 0px;
 }
